00-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: languageexercises-ns
  labels:
    name: languageexercises-ns
