10-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  labels:
    app: mongodb-svc
  namespace: languageexercises-ns
spec:
  ports:
  - port: 27017
    name: database
  # clusterIP retiré (ou remplace par "type: NodePort" si besoin d'accès externe)
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: languageexercises-ns
spec:
  serviceName: "mongodb-svc" 
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec: 
      containers:
      - name: mongodb
        image: mongo:6.0.16
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db 
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongo-pvc
