20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languageexercisesbackend-deployment
  namespace: languageexercises-ns
  labels:
    app: languageexercisesbackend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: languageexercisesbackend
  template:
    metadata:
      labels:
        app: languageexercisesbackend
    spec:
      containers:
      - name: languageexercisesbackend-container
        image: localhost:5000/languageexercises_backend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: languageexercisesbackend-svc
  namespace: languageexercises-ns
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector:
    app: languageexercisesbackend
