30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: languageexercisesfrontend-deployment
  namespace: languageexercises-ns
  labels:
    app: languageexercisesfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: languageexercisesfrontend
  template:
    metadata:
      labels:
        app: languageexercisesfrontend
    spec:
      containers:
        - name: languageexercisesfrontend-container
          image: localhost:5000/languageexercises_frontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: languageexercisesfrontend-svc
  namespace: languageexercises-ns
spec:
  ports:
    - port: 80
      targetPort: 5173
  selector:
    app: languageexercisesfrontend
