40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: languageexercises-ingress
  namespace: languageexercises-ns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: langexer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: languageexercisesfrontend-svc 
            port:
              number: 80
